--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-postcss": "^6.0.0",
     "gulp-posthtml": "^1.5.2",
     "gulp-prettify": "^0.4.0",
+    "gulp-remember": "^0.3.1",
     "gulp-sass": "^2.1.1",
     "gulp-sass-glob-import": "^0.1.0",
     "gulp-uglify": "^1.5.1",
