--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^1.0.1",
     "gulp-filter": "^4.0.0",
+    "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jade": "^1.1.0",
     "gulp-postcss": "^6.0.0",
