add debug package

--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "jquery": "^2.2.2",
     "bootstrap-sass": "^3.3.6",
     "bootstrap": "^3.3.6",
-    "css.modfiles": "^0.0.6"
+    "css.modfiles": "^0.0.6",
+    "show-js-error": "^1.2.0"
   }
 }
