--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jade": "^1.1.0",
+    "gulp-load-plugins": "^1.2.0",
     "gulp-postcss": "^6.0.0",
     "gulp-posthtml": "^1.5.2",
     "gulp-prettify": "^0.4.0",
