--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "main-bower-files": "^2.11.1",
     "perfectionist": "^2.1.3",
     "postcss-custom-selectors": "^3.0.0",
+    "postcss-focus-hover": "0.0.1",
     "postcss-pxtorem": "^3.3.1",
     "posthtml-bem": "^0.2.2",
     "run-sequence": "^1.1.5"
