--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-posthtml": "^1.5.2",
     "gulp-prettify": "^0.4.0",
     "gulp-remember": "^0.3.1",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.1.1",
     "gulp-sass-glob-import": "^0.1.0",
     "gulp-uglify": "^1.5.1",
