--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
+    "gulp-check": "^0.1.1",
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^2.0.0",
     "gulp-filter": "^4.0.0",
